test/fail/internal/expr_after_raise.lily
#[
SyntaxError: Statement(s) after 'raise' will not execute.
    from expr_after_raise.lily:7:
]#

raise ValueError("")
var v = 10
